# todo_cli

./: readme.md  requirements.txt  setup.cfg  tree.txt
src/assets/: paths.json  paths.schema.json
src/todo_cli/: __init__.py
src/todo_cli/commands/: group.py  task.py
tests/: sample.py
todo_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
