[metadata]
name = todo_cli
author = soupless
version = 0.1.0
description = A command line tool to manage todos.
license = MIT
license_files = LICENSE

[options]
packages = find:
install_requires = 
    rich==13.0.0
    rich-click==1.6.0
    click==8.1.3
python_requires = >=3.8.0

[options.extras_require]
testing =
    mypy>=0.942
    flake8>=3.10
    pytest>=7.0.0
    pytest-cov>=2.0

[options.entry_points]
console_scripts = 
    todo = todo_cli:main
